Fixed layout issues

--- a/frontend/renderer/styles/globals.css
+++ b/frontend/renderer/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+:root {
+  height: 100%;
+}
+
 @layer base {
   body {
     @apply bg-gray-900 text-white;
